[build-system]
requires = ['setuptools>=51.0','wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'download-kaggle-dataset'
version = '0.1.0'
description = 'Python script to download Kaggle Dataset using Kaggle API'
authors = 'K14aNB'
license = 'Apache-2.0 license'
readme = 'README.md'
requires-python = '>=3.7'

[project.urls]
homepage = 'https://github.com/K14aNB/download-kaggle-dataset'

[tools.setuptools]
packages = ['download-kaggle-dataset']