[tool.poetry]
name = "download_kaggle_dataset"
version = "0.1.0"
description = "Python script to download Kaggle Dataset using Kaggle API"
authors = ["K14aNB"]
license = "Apache 2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
